<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayout">

    <TextView
        android:id="@+id/TVRLTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/rl_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/TVRL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVRLTitle"
        android:padding="5dp"
        android:text="@string/rl_tx1" />

    <TextView
        android:id="@+id/TVRL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVRLTitle"
        android:layout_toRightOf="@id/TVRL1"
        android:padding="5dp"
        android:text="@string/rl_tx2" />

    <TextView
        android:id="@+id/TVRL3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVRL1"
        android:layout_alignParentRight="true"
        android:padding="5dp"
        android:text="@string/rl_tx3" />

    <TextView
        android:id="@+id/TVEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:text="@string/rl_enter" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/TVEnter"
        android:layout_centerVertical="true">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/ETName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TI"
        android:layout_alignLeft="@id/TI"
        android:onClick="RLBtnBackClicked"
        android:text="@string/back" />

</RelativeLayout>