<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TVHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/TVSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/home_subtitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/IVRL"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/relative"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/TVRL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/rl_text" />


    </LinearLayout>

    <Button
        android:id="@+id/BTNRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="BtnRLClicked"
        android:text="@string/rl" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/constraint"/>

        <TextView
            android:id="@+id/TVCL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/cl_text" />

    </LinearLayout>

    <Button
        android:id="@+id/BTNCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="BtnCLClicked"
        android:text="@string/cl" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/grid"/>

        <TextView
            android:id="@+id/TVGL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/gl_text" />

    </LinearLayout>

    <Button
        android:id="@+id/BTNGL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="BtnGLClicked"
        android:text="@string/gl" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>


</LinearLayout>